--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,50 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
-        <link rel="stylesheet" 
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
-            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
-            crossorigin="anonymous">
-        <title>{{title}}</title>
-    </head>
-    <body>
-        <nav class="menu">
-            <div class="menu">
-                <h1>Миссия Колонизация Марса</h1>
-                <p>Mars One</p>
-            </div>
-        </nav>
-        <h3>И на Марсе будут яблони цвести!</h3>
-        <main role="main" class="container">
-            {% block content %}
-            {% endblock %}
-        </main>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>{{ title | default("MarsOne") }}</title>
+</head>
+<body>
+<header>
+    <nav class="navbar navbar-light bg-light", style="background-color: gray;">
+        <div class="container-fluid">
+            <h1>Миссия Колонизация Марса</h1>
+            {% if current_user.is_authenticated %}
+                <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+            {% else %}
+                <div>
+                    <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                    <a class="btn btn-success" href="/login">Войти</a>
+                </div>
+            {% endif %}
+            <a class="navbar-brand" href="#">MarsOne</a>
+        </div>
+    </nav>
+    <h4>И на Марсе будут яблони цвести!</h4>
+</header>
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+
+<main role="main" class="container">
+    {% block content %}{% endblock %}
+</main>
+</body>
 </html>
