--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-light bg-light", style="background-color: gray;">
+    <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <h1>Миссия Колонизация Марса</h1>
             {% if current_user.is_authenticated %}
