--- a/templates/login.html
+++ b/templates/login.html
@@ -28,4 +28,8 @@
     {{ form.submit(type="submit", class="btn btn-primary") }}
 </form>
 
+{% if message %}
+    <p style="color: red; font-size: 60px;">{{ message }}</p>
+{% endif %}
+
 {% endblock %}
