--- a/templates/work_log.html
+++ b/templates/work_log.html
@@ -4,9 +4,10 @@
 
 <h2 align="center">Works log</h2>
 {% if current_user.is_authenticated %}
-    <div>
-        <a href="/add-job" class="btn btn-primary mt-3 mb-4">Добавить Работу</a>
-    </div>
+<div>
+    <a href="/add-job" class="btn btn-primary mt-3 mb-4">Добавить Работу</a>
+    <a href="/departments" class="btn btn-primary mt-3 mb-4">Департаменты</a>
+</div>
 {% endif %}
 {% for job in jobs %}
     <div class="mb-3 job">
