Добавил city_from во все файлы с пользователем

--- a/templates/register.html
+++ b/templates/register.html
@@ -86,6 +86,14 @@
             </div>
         {% endfor %}
 
+        {{ form.city_from.label }}
+        {{ form.city_from(class="form-control") }}
+        {% for error in form.city_from.errors %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+        {% endfor %}
+
     <div>{{ form.submit(type="submit", class="btn btn-primary") }}</div>
 
 </form>
